# HLS-Downloader

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  HLS-Downloader.spec  INSTALLER_SYSTEM_OVERVIEW.md  Makefile  README.md  build_executable.py  build_installer_bundle.py  build_optimized.sh  capture_m3u8.py  cli_downloader.py  create_distribution.py  hls_downloader_optimized.spec  hls_gui_settings.ini  install.bat  install.sh  installer.py  main.py  prepare_release.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-installers.yml  build.yml  build.yml.disabled
assets/: .gitkeep
build_bundle/installer_package/: INSTALLER_README.md
build_bundle/installer_package/HLS Downloader.app/Contents/: Info.plist
build_bundle/installer_package/HLS Downloader.app/Contents/Resources/: icon.icns
build_bundle/installer_package/HLS Downloader.app/Contents/_CodeSignature/: CodeResources
downloads/: .gitkeep
hlsdownloader/: __init__.py  capture.py  cli.py  gui.py  hls.py  http_dl.py  utils.py
installer/: build_installers.py  install.bat  install.py  install.sh
release_assets/: GITHUB_RELEASE_TEMPLATE.md  RELEASE_NOTES.md  SHA256SUMS.txt
videodownloader/: __init__.py  capture.py  cli.py  gui.py  hls.py  http_dl.py  utils.py
